<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/bule"
        android:text="@string/newleads"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="10dp"
        android:text="@string/new_success"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:gravity="center" >

        <TextView
            android:layout_width="5dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/icon_newlead_success" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/icon_button_newlead_cuccess_edit_h"
        android:text="@string/edit"
        android:textColor="@color/bule" />

    <Button
        android:id="@+id/bnt_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_edit"
        android:layout_marginTop="31dp"
        android:background="@drawable/btn_seg_active_tab_bc"
        android:text="@string/continue_to_add"
        android:textColor="@color/bule" />

</RelativeLayout>