<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#f0f0f0"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/unlimited"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:src="@drawable/icon_list_select" />
    </LinearLayout>
      <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/linearLayout_no"
        android:layout_marginLeft="15dp"
        android:background="@color/gray" />
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/start_time"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView_startdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/please_start_time"
            android:textSize="16dp" 
             android:textColor="#d0d0d0"/>
    </LinearLayout>
    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginLeft="15dp"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true" 
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/over_time"
            android:textSize="16dp"  />

       <TextView
            android:id="@+id/textView_overdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/please_over_time"
            android:textSize="16dp"
            android:textColor="#d0d0d0" />
    </LinearLayout>
     <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginLeft="15dp"
        android:background="@color/gray" />

     <Button
         android:id="@+id/button_screening"
         android:layout_width="80dp"
         android:layout_height="30dp"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/linearLayout3"
         android:layout_marginTop="10dp"
         android:layout_marginRight="15dp"
         android:background="@drawable/icon_date_shaixuan"
         android:textSize="16sp"
         android:text="@string/filter"
         android:textColor="@color/red" />

     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="10dp"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/button_screening"
         android:text="" />

</RelativeLayout>