<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="#00000000"
    android:gravity="center"
    >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/contact_leads"
        android:textSize="18sp" 
        android:background="@drawable/photo_gallery_selector"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:background="@color/gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:background="@drawable/photo_cancel_selector"
            android:text="@string/yes" 
            android:textColor="@color/bule"/>
         <Button
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray"/>

        <Button
            android:id="@+id/button_dimiss"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:text="@string/no" 
            android:background="@drawable/photo_camera_selector"
            android:textColor="@color/bule"/>
    </LinearLayout>

</RelativeLayout>