<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroungcolor" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/relativeLayout1"
        android:background="@color/bule" >

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/changepassword"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/linearLayout_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/signup_return" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings"
                android:textColor="@color/white" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView_login_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon_login_close" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="15dp"
        android:background="@color/white" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView1"
            android:background="@drawable/btn_seg_active_tab_left"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/oldpasswrod"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editText_oldpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:layout_weight="1"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:hint="@string/old_passwrod" />
            
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/linearLayout1"
            android:layout_marginLeft="15dp"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView3"
            android:background="@drawable/btn_seg_active_tab_left"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/newspasswrod"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editText_newspassword"
                 android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:layout_weight="1"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:hint="@string/news_passwrod" 
                />


        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/linearLayout2"
            android:layout_marginLeft="15dp"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView4"
            android:background="@drawable/btn_seg_active_tab_left"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/determinepasswrod"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editText_determinepasswrod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:textSize="16sp"
                android:layout_weight="1"
                android:hint="@string/determine_passwrod" 
                android:inputType="textPassword" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/linearLayout3"
            android:background="@color/gray" />
    </RelativeLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:enabled="false"
        android:text="@string/save" 
        android:textColor="@color/gray"
        android:background="@drawable/btn_seg_active_tab_bc"/>

</RelativeLayout>