<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/bg_login">
    <!-- 提示信息 -->
    <TextView 
        android:id="@+id/login_toast"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/name_password_erro"
        android:layout_marginTop="2dp"
        android:background="@color/gray"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="15sp"
        android:visibility="invisible"
        />
    
    <TextView 
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logins"
        android:textColor="@color/white"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="23dip"
        android:layout_below="@id/login_toast"
        android:textSize="30sp"/>
    <!-- 学校账号 -->
    <RelativeLayout 
        android:id="@+id/login_school_rel"
        android:layout_width="match_parent"
        android:layout_below="@id/login_text"
        android:layout_height="30dp"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip"
        >
      <EditText 
          android:id="@+id/login_school_et"
          android:layout_width="match_parent"
          android:layout_height="30dip"
          android:hint="@string/school_accounts"
          android:background="@null"
          android:paddingLeft="40dip"
          android:gravity="center_vertical"
          android:layout_marginRight="20dip"
          android:textColor="@color/white"
          android:textSize="14sp"
          />  
        <ImageView 
            android:id="@+id/login_school_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="6dip"
            android:src="@drawable/icon_login_school_id"
            android:layout_alignLeft="@id/login_school_et"/>
        
    </RelativeLayout>
    <View 
        android:id="@+id/login_view1"
            android:layout_width="match_parent"
            android:layout_height="0.4dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_below="@id/login_school_rel"
            android:background="@color/bule"
            />
    <!-- 我的账号或手机号 -->
     <RelativeLayout 
        android:id="@+id/login_userNmu_rel"
        android:layout_width="match_parent"
        android:layout_below="@id/login_view1"
        android:layout_height="30dp"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip"
        >
      <EditText 
          android:id="@+id/login_userNum_et"
          android:layout_width="match_parent"
          android:layout_height="30dip"
          android:hint="@string/my_accounts"
          android:background="@null"
          android:paddingLeft="40dip"
          android:gravity="center_vertical"
          android:layout_marginRight="20dip"
          android:textColor="@color/white"
          android:textSize="14sp"
          />  
        <ImageView 
            android:id="@+id/login_userNum_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="6dip"
            android:src="@drawable/icon_login_id"
            android:layout_alignLeft="@id/login_userNum_et"/>
    </RelativeLayout>
     <View 
        android:id="@+id/login_view2"
            android:layout_width="match_parent"
            android:layout_height="0.4dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_below="@id/login_userNmu_rel"
            android:background="@color/bule"
            />
    <!-- 密码 -->
       <RelativeLayout 
        android:id="@+id/login_password_rel"
        android:layout_width="match_parent"
        android:layout_below="@id/login_view2"
        android:layout_height="30dp"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip"
        >
      <EditText 
          android:id="@+id/login_password_et"
          android:layout_width="match_parent"
          android:layout_height="30dip"
          android:hint="@string/login_password"
          android:background="@null"
          android:paddingLeft="40dip"
          android:gravity="center_vertical"
          android:layout_marginRight="20dip"
          android:textColor="@color/white"
          android:textSize="14sp"
           android:inputType="textPassword"
          />  
        <ImageView 
            android:id="@+id/login_password_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="6dip"
            android:src="@drawable/icon_login_password"
            android:layout_alignLeft="@id/login_password_et"/>
        
          <ImageView
            android:id="@+id/imageView_password_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/login_password_img"
            android:layout_alignRight="@+id/login_password_et"
            android:src="@drawable/icon_login_close" />
    </RelativeLayout>
    <View 
        android:id="@+id/login_view3"
            android:layout_width="match_parent"
            android:layout_height="0.4dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_below="@id/login_password_rel"
            android:background="@color/bule"
            />
    <TextView 
        android:id="@+id/forget_login_password"
        android:layout_width="match_parent"
        android:layout_height="25dip"
        android:layout_below="@id/login_view3"
        android:layout_marginRight="20dip"
        android:layout_marginTop="5dip"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:gravity="center_vertical|right"
       />
    
    <TextView 
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/loginss"
        android:gravity="center"
        android:layout_marginTop="20dip"
        android:textColor="@color/white"
        android:background="@drawable/icon_login_img"
        android:layout_below="@id/forget_login_password"
        android:textSize="25sp"/>

   

</RelativeLayout>
